--- a/installer/MODULE.bazel
+++ b/installer/MODULE.bazel
@@ -18,6 +18,7 @@ module(name = "installer")
 bazel_dep(name = "rules_nixpkgs_core", version = "0.10.0")
 bazel_dep(name = "rules_foreign_cc", version = "0.10.1")
 bazel_dep(name = "platforms", version = "0.0.9")
+bazel_dep(name = "pcre2", version = "10.43")
 
 nix_repo = use_extension("@rules_nixpkgs_core//extensions:repository.bzl", "nix_repo")
 nix_repo.default(name = "nixpkgs")
